--- a/common_base/src/main/res/values/strings.xml
+++ b/common_base/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="happy_a_minute">轻松一刻</string>
     <string name="about">关于</string>
     <string name="setting">设置</string>
+
+    <string name="progress_please_wait">请等待...</string>
 </resources>
