--- a/module_usercenter/src/main/res/values/strings.xml
+++ b/module_usercenter/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">module_usercenter</string>
+    <string name="please_input_url">请输入服务器地址</string>
     <string name="please_input_username">请输入用户名</string>
     <string name="please_input_password">请输入密码</string>
     <string name="goto_register">注册账号</string>
