--- a/module_usercenter/src/main/res/values/strings.xml
+++ b/module_usercenter/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="please_input_url">请输入服务器地址</string>
     <string name="please_input_username">请输入用户名</string>
     <string name="please_input_password">请输入密码</string>
-    <string name="please_input_ip">请输入访问地址</string>
+    <string name="please_input_host">请输入访问地址</string>
     <string name="please_input_only">请输入唯一码</string>
     <string name="please_input_code">请输入验证码</string>
     <string name="goto_register">注册账号</string>
