--- a/common_base/src/main/res/values/strings.xml
+++ b/common_base/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="search">搜索</string>
     <string name="happy_a_minute">轻松一刻</string>
     <string name="about">关于</string>
+    <string name="check">检查版本</string>
     <string name="setting">设置</string>
     <string name="logout">注销登录</string>
 
@@ -14,5 +15,7 @@
     <string name="todo_check_1">站内消息</string>
     <string name="todo_check_2">短信</string>
     <string name="todo_check_3">邮件</string>
+
+    <string name="handle_history_title">历史记录</string>
 
 </resources>
